--- a/marker_code.html
+++ b/marker_code.html
@@ -12,7 +12,7 @@
         <a-scene embedded arjs>
 
         <!--マーカーを登録-->
-        <a-marker preset="https://github.com/Arihiro0524/YOSEGI-AR-marker/pattern-marker.patt">
+        <a-marker pattern="https://github.com/Arihiro0524/YOSEGI-AR-marker/pattern-marker.patt">
 
             <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
             <a-entity
