--- a/marker_code.html
+++ b/marker_code.html
@@ -12,7 +12,7 @@
         <a-scene embedded arjs>
 
         <!--マーカーを登録-->
-        <a-marker type = "pattern" url = "https://github.com/Arihiro0524/YOSEGI-AR-marker/pattern-marker.patt">
+        <a-marker type = "pattern" url = "https://arihiro0524.github.io/YOSEGI-AR-marker/pattern-marker.patt">
             
             <a-box position="0 -1 0" scale="1 1 1" color="grey"></a-box>
             
