--- a/pattern-yosegi-reader.html
+++ b/pattern-yosegi-reader.html
@@ -21,8 +21,7 @@
 
             <a-entity
 
-                obj-model="obj: url(https://arjs-cors-proxy.herokuapp.com/https://arihiro0524.github.io/YOSEGI-AR-marker/warakuan.obj);
-                mtl: url(https://arjs-cors-proxy.herokuapp.com/https://arihiro0524.github.io/YOSEGI-AR-marker/warakuan.mtl)"
+                obj-model="obj: url(https://arjs-cors-proxy.herokuapp.com/https://arihiro0524.github.io/YOSEGI-AR-marker/warakuan.obj);"
 
                 position="0 0 0"
                 scale="0.0002 0.0002 0.0002"
